--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,8 @@ form {
   margin: 0 auto;
   max-width: 500px;
   min-width: 300px;
-  width: 60vw;
+  width: 60xvw;
+  padding-bottom: 2em;
 }
 
 fieldset {
@@ -39,8 +40,36 @@ textarea,
 select {
   width: 100%;
   margin: 10px 0 0 0;
+  min-height: 2em;
+}
+
+input, textarea {
+  background-color: #0a0a23;
+  border: 1px solid #0a0a23;
+  color: #ffffff;
 }
 
 .inline {
   width: unset;
+  margin: 0 0.5em 0 0;
+  vertical-align: middle;
+}
+
+input[type="submit"] {
+  display: block;
+  width: 60%;
+  margin: 1em auto;
+  height: 2em;
+  font-size: 1.1rem;
+  background-color: #3b3b4f;
+  border-color: white;
+  min-width: 300px;
+}
+
+input[type="file"] {
+  padding: 1px 2px;
+}
+
+a {
+  color: #dfdfe2;
 }
